--- a/CSS/style02.css
+++ b/CSS/style02.css
@@ -18,3 +18,64 @@ h1,h3{
     color:aliceblue;
     
 }
+/*decendent selector*/
+.post a {
+    color: purple;
+    background-color: yellow;
+}
+nav ul li a {
+    color: hotpink;
+}
+/*siblings selector*/
+p + h3 {
+    text-decoration: underline;
+}
+.upvote + button {
+    background-color: cornflowerblue;
+    color: darkblue;
+}
+div >input{
+    background-color: darksalmon;
+}
+/*attribute selector*/
+input[type="text"]{
+    color: green;
+}
+input[type="password"]{
+    color: red;
+}
+input[type]{
+    background-color: ghostwhite;
+}
+button:hover {
+    background-color: black;
+    color: white;
+}
+h3:hover {
+    text-decoration: overline;
+}
+button:active {
+    background-color: hotpink;
+    color: black;
+}
+p:active {
+    font-weight: bold;
+    color: green;
+}
+input[type="radio"]:checked +label{
+    color: red;
+    font-weight: bold;
+}
+div:nth-of-type(2n){
+    background-color: blanchedalmond;
+}
+/*pseudo element*/
+h1::first-letter{
+    color: black;
+}
+p::first-line{
+    color: purple;
+}
+p::selection{
+    background-color: rgb(208, 240, 100);
+}
