--- a/CSS/Em&Remunit.css
+++ b/CSS/Em&Remunit.css
@@ -12,3 +12,18 @@
     font-size: 1.5em;
     padding: 1em;
 }
+button{
+    font-size: 50px;
+    border-radius: 25px;
+    border: 5px solid green;
+    padding-left: 1em;
+    padding-right: 1em;
+
+
+}
+section{
+    font-size: 15px;
+}
+div{
+    font-size: 2rem;
+}
