--- a/CSS/Transform.css
+++ b/CSS/Transform.css
@@ -8,6 +8,7 @@ div{
     background-color: #7aa874;
     border: 2px solid black;
     margin: 10px;
+    margin: 10px auto;
 }
 div:nth-of-type(2n){
     background-color: #f7db6a;
@@ -22,8 +23,14 @@ div:nth-of-type(3n) {
     transform: rotate(45deg);
 }
 #two{
-    transform: scale(2 , 0.5);
+    transform: scale(2 , 1);
 }
 #three{
-    transform: translate(100px , 100px);
+    transform: translate(100px);
+}
+#four{
+    transform: skew(30deg);
+}
+#five{
+    transform: rotate(30deg) translateX(150px);
 }
