--- a/CSS/flexbox.css
+++ b/CSS/flexbox.css
@@ -8,8 +8,16 @@
     flex-direction: row; /*same as column*/
     justify-content: flex-start;
     flex-wrap: wrap;
-    align-items: flex-start;
+    /* align-item: baseline;*/
+    align-content: flex-start;
 
+}
+#org{
+    align-self: flex-start;
+    flex-basis: 50px;
+}
+#blue{
+    flex-basis: 400px;
 }
 h1 {
     text-align: center;
